--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <hr />
 
     <header style="text-align: center;">
-        <img src="image/foto-profile.jpg" width="200" height="200" style="border-radius: 50%;" />
+        <img src="gambar.jpg" width="200" height="200" style="border-radius: 50%;" />
         <h1>Jeky Supriyanto</h1>
         <p>(Technician)</p>
     </header>
